// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer.jsx Footer css 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  bottom: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #c2dde6;
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  height: 100px;
}

<div
  className="c0"
/>
`;

exports[`Footer.jsx matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  bottom: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #c2dde6;
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  height: 100px;
}

.c1 {
  margin: 10px;
  padding: 0 50px;
  height: 100px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 1100px;
}

.c4 {
  height: 50px;
  margin: 0 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-size: 1.2rem;
  font-weight: 200;
}

@media (max-width:1025px) {
  .c1 {
    width: 800px;
  }
}

@media (max-width:500px) {
  .c1 {
    width: 100vw;
    -webkit-box-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
    margin: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      <span>
        Fred Davison
      </span>
       DevMountain Student 2019
    </p>
    <div
      className="c3"
    >
      <a
        href="https://www.linkedin.com/in/fred-davison-220425196/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="linkedIn logo"
          className="c4"
          src="In.png"
        />
      </a>
      <a
        href="https://github.com/fdavison1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="github logo"
          className="c4"
          src="25231.png"
        />
      </a>
    </div>
  </div>
</div>
`;
